--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
       </div>
     </section>
     <div class="container">
-      <input />
-      <div id="target"></div>
-    </div>
+      <div class="autocomplete"></div>
     <script src="utils.js"></script>
     <script src="index.js"></script>
   </body>
