--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <div class="autocomplete"></div>
       <div id="summary"></div>
     <script src="utils.js"></script>
+    <script src="autuCompelete.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
